--- a/wp-content/themes/twentytwentyfive/style.css
+++ b/wp-content/themes/twentytwentyfive/style.css
@@ -59,3 +59,6 @@ h1, h2, h3, h4, h5, h6, blockquote, caption, figcaption, p {
 .more-link {
 	display: block;
 }
+h1.wp-block-heading.has-text-align-left {
+    color: red;
+}
